--- a/style.css
+++ b/style.css
@@ -9,3 +9,9 @@
     padding: 0;
     font-family: Roboto, sans-serif;
 }
+
+.container {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr 2fr;
+}
