--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     src: url(./fonts/Roboto-Regular.ttf);
 }
 
+:root {
+    --blue: rgb(82, 163, 255);
+    --white: #ffffff;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -12,6 +17,39 @@
 
 .container {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 2fr;
+    min-height: 100vh;
+}
+
+.sidebar {
+    grid-row: 1 / 3;
+    background-color: var(--blue);
+}
+
+ul li {
+    margin-bottom: 10px;
+    list-style-type: none;
+}
+
+svg {
+    height: auto;
+    width: 24px;
+    fill: var(--white);
+}
+
+ul li a {
+    color: var(--white);
+    font-size: 20px;
+    text-decoration: none
+}
+
+.sidebar-logo,
+.sidebar-links-top {
+    margin-bottom: 40px;
+}
+
+.sidebar-links-top ul {
+    display: grid;
+    grid-template-rows: repeat(6, 1fr);
 }
