--- a/style.css
+++ b/style.css
@@ -25,11 +25,31 @@
 .sidebar {
     grid-row: 1 / 3;
     background-color: var(--blue);
+    padding: 30px 45px;
+}
+
+.sidebar-logo {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.sidebar-logo svg {
+    height: auto;
+    width: 30px;
+}
+
+.sidebar-logo span {
+    color: var(--white);
+    font-size: 2rem;
 }
 
 ul li {
     margin-bottom: 10px;
     list-style-type: none;
+    display: flex;
+    align-items: center;
+    gap: 15px;
 }
 
 svg {
@@ -52,4 +72,11 @@ ul li a {
 .sidebar-links-top ul {
     display: grid;
     grid-template-rows: repeat(6, 1fr);
+    gap: 10px;
+}
+
+.sidebar-links-bottom ul {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    gap: 10px;
 }
