--- a/style.css
+++ b/style.css
@@ -18,9 +18,11 @@
 .container {
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 2fr;
+    grid-template-rows: 1fr 3fr;
     min-height: 100vh;
 }
+
+/* Sidebar */
 
 .sidebar {
     grid-row: 1 / 3;
@@ -37,6 +39,7 @@
 .sidebar-logo svg {
     height: auto;
     width: 30px;
+    fill: var(--white);
 }
 
 .sidebar-logo span {
@@ -52,7 +55,8 @@ ul li {
     gap: 15px;
 }
 
-svg {
+.sidebar-links-top ul li svg,
+.sidebar-links-bottom ul li svg {
     height: auto;
     width: 24px;
     fill: var(--white);
@@ -79,4 +83,53 @@ ul li a {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     gap: 10px;
+}
+
+/* header */
+.header {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    padding-left: 50px;
+    padding-top: 15px;
+}
+
+.header-top-left svg,
+.header-top-right svg {
+    height: auto;
+    width: 27px;
+}
+
+.icon {
+    height: 60px;
+    width: 73px;
+    border-radius: 50%;
+}
+
+.header-top {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 170px;
+}
+
+.header-top-left input[type="text"] {
+    background-color: rgb(222, 222, 240);
+    border: none;
+    height: 26px;
+    width: 550px;
+    padding: 17px 10px;
+    border-radius: 10px;
+}
+
+.header-top-left,
+.header-top-right {
+    display: flex;
+    align-items: center;
+}
+
+.header-top-left {
+    gap: 15px;
+}
+
+.header-top-right {
+    gap: 25px;
 }
