--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 :root {
     --blue: rgb(82, 163, 255);
     --white: #ffffff;
+    --gray: #bbbbbb;
+    --gold: #ffd700;
 }
 
 * {
@@ -18,7 +20,7 @@
 .container {
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 3fr;
+    grid-template-rows: 1fr 5fr;
     min-height: 100vh;
 }
 
@@ -91,6 +93,7 @@ ul li a {
     grid-template-rows: 1fr 1fr;
     padding-left: 50px;
     gap: 5px;
+    padding-bottom: 25px;
 }
 
 .header-top-left svg,
@@ -172,4 +175,53 @@ ul li a {
     width: 75px;
     height: 40px;
     cursor: pointer;
+}
+
+/* Main Content */
+
+.main-content {
+    background-color: var(--gray);
+    display: grid;
+    grid-template-columns: 2.5fr 1fr;
+    padding-top: 25px;
+    padding-left: 50px;
+}
+
+.main-content-left h2 {
+    margin-bottom: 25px;
+}
+
+.main-content-cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 25px;
+}
+
+.card {
+    width: 300px;
+    /* background: linear-gradient(to right, var(--gold) 2%, var(--white) 98%); */
+    background: linear-gradient(
+        to right, 
+        var(--gold) 0%,
+        var(--gold) 4%,
+        var(--white) 4%,
+        var(--white) 100%
+      );
+    border-radius: 10px;
+    height: 230px;
+    padding: 20px 30px;
+    display: grid;
+    gap: 5px;
+}
+
+.card-icons {
+    display: flex;
+    gap: 10px;
+    justify-content: end;
+}
+
+.card-icons svg {
+    height: auto;
+    width: 27px;
 }
